# amuhacks

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py
backend/api/v1/: deps.py
backend/api/v1/endpoints/: accounts.py  auth.py  transactions.py  users.py
backend/core/: config.py  security.py
backend/crud/: __init__.py  base.py  crud_account.py  crud_transaction.py  crud_user.py
backend/db/: base.py  base_class.py  models.py
backend/schemas/: __init__.py  token.py  transaction.py  user.py
backend/services/: nlp_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: AccountItem.vue  AccountsSection.vue  AddAccountModal.vue  AddTransactionModal.vue  AuthLayout.vue  DashboardHeader.vue  ErrorMessage.vue  ExpenseIncomeRatioChart.vue  FilteredTransactions.vue  LoadingIndicator.vue  RecentTransactionsSection.vue  SpendingIncomeChart.vue  TransactionItem.vue
frontend/src/router/: index.js
frontend/src/stores/: authStore.js  dataStore.js
frontend/src/views/: Dashboard.vue  LandingPage.vue  LoginPage.vue  RegisterPage.vue  TransactionsView.vue
schemas/: account.py  transaction.py
